<resources>
    <string name="app_name">Lingkungan Seni Cibiru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="loading">Loading....</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jeniskesenian">TYPE OF ART</string>
    <string name="kelurahan">DISTRICT</string>
    <string name="info">INFO</string>
    <string name="review">REVIEW</string>
    <string name="discover">DISCOVER</string>
    <string name="district_picks">DISTRICT PICKS</string>
    <string name="based_on_art">BASED ON ART</string>
    <string name="lu_lu_al_maknun">Lu\'lu\' Al-Maknun</string>
    <string name="nabila_siti_r">Nabila Siti R.</string>
    <string name="wha_wha_adytoma">Wha Wha Adytoma</string>
    <string name="desk_app">Aplikasi yang membantu mencari informasi tentang berbagai jenis kesenian di daerah kecamtan Cibiru, Bandung</string>
    <string name="versi">Versi : Beta 1.0</string>
    <string name="about_application">About Application</string>
    <string name="developer">Developer:</string>
</resources>
